samples/_failures_safe/1761723746_7d26df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_02aac584.c: In function ‘main’:
./samples/SAFE/__tmp_02aac584.c:156:57: error: expected ‘)’ at end of input
  156 |     if (fgets(input_buffer, sizeof(input_buffer), stdin)
      |        ~                                                ^
      |                                                         )
./samples/SAFE/__tmp_02aac584.c:156:5: error: expected declaration or statement at end of input
  156 |     if (fgets(input_buffer, sizeof(input_buffer), stdin)
      |     ^~
